ヘッダーができたよ

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,31 @@
   </head>
   <body>
 	<header class="header">
-		<h1>電撃少女エクレア</h1>		
+		<div class="header-container">
+			<a class="header-qpic" href="http://qpic.jp/"><img src="images/header/qpic.svg" alt="Qpic"></a>
+			<h1 class="header-logo"><img src="images/header/logo.png" alt="電撃少女エクレア"></h1>
+			<div class="header-detail">
+				<ul>
+					<li>ジャンル: 3Dアクション</li>
+					<li>プラットフォーム: Windows, Mac</li>
+					<li>プレイ人数: 1人</li>
+				</ul>
+				<div class="header-message">
+				2018年中の一部公開に向けて現在開発中
+			</div>
+			</div>
+			<div class="header-share">
+				
+			</div>
+			<div class="header-info">
+				<a href="" class="header-banner"> 
+					<img src="images/header/logo.png">
+				</a>
+				<a href="" class="header-banner"> 
+					<img src="images/header/logo.png">
+				</a>
+			</div>
+		</div>
 	</header>
 	<nav class="navigation">
 		<ul>
@@ -93,7 +117,7 @@
 			<li>2019年中に第4章まで公開</li>
 		</ul>
 	</div>
-	<div id="member" class="member">
+<!-- 	<div id="member" class="member">
 		<h2>制作メンバー</h2>
 		<div class="member-inner">
 			<dl>
@@ -115,7 +139,7 @@
 				<dd>サウンド</dd>
 			</dl>
 		</div>
-	</div>
+	</div> -->
 	<footer class="footer">
 		&copy;Team HTL in Qpic
 	</footer>
