フォントと色

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>電撃少女エクレア 公式サイト</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
   </head>
   <body>
 	<header class="header">
@@ -35,7 +36,7 @@
 		</div>
 	</header>
 	<nav class="navigation">
-		<ul>
+		<ul class="container-wide">
 			<li><a href="#"></a></li>
 			<li><a href="#about">電撃少女エクレアとは</a></li>
 			<li><a href="#characters">キャラクター</a></li>
