ナビゲーションひとまず完成

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>電撃少女エクレア 公式サイト</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
   </head>
   <body>
 	<header class="header">
@@ -37,12 +36,11 @@
 	</header>
 	<nav class="navigation">
 		<ul class="container-wide">
-			<li><a href="#"></a></li>
-			<li><a href="#about">電撃少女エクレアとは</a></li>
-			<li><a href="#characters">キャラクター</a></li>
-			<li><a href="#gallery">ギャラリー</a></li>
-			<li><a href="#roadmap">ロードマップ</a></li>
-			<li><a href="#member">制作メンバー</a></li>
+			<li class="nav-top"><a href="#"><img src="images/navgation/silhouette.svg" alt="トップへ"></a></li>
+			<li class="nav-about"><a href="#about"><span>電撃少女</span><span>エクレアとは</span></a></li>
+			<li class="nav-character"><a href="#characters">キャラクター</a></li>
+			<li class="nav-gallery"><a href="#gallery">ギャラリー</a></li>
+			<li class="nav-roadmap"><a href="#roadmap">ロードマップ</a></li>
 		</ul>
 	</nav>
 	<div class="movie">
