--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
 			</div>
 		</div>
 	</header>
+	<div class="navigation-wrapper">
 	<nav class="navigation">
 		<div class="container-wide">
 			<ul>
@@ -129,6 +130,7 @@
 			<li>2019年中に第4章まで公開</li>
 		</ul>
 	</div>
+	</div><!-- navigation-wrapper -->
 <!-- 	<div id="member" class="member">
 		<h2>制作メンバー</h2>
 		<div class="member-inner">
