動画差し替え

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 	</nav>
 	<div class="movie">
 		<a href="#">
-			<div id="player"></div>
+			<iframe width="1280" height="320" src="https://www.youtube.com/embed/qmaJQN9-RVM?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=qmaJQN9-RVM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</a>
 	</div>
 	<div id="about" class="about">
@@ -78,7 +78,7 @@
 
 			<h3>エクレア最大のアクション「電撃移動」</h3>
 			<div class="about-movie">
-				<iframe width="480" height="360" src="https://www.youtube.com/embed/autYRqHTAlI?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<iframe width="480" height="360" src="https://www.youtube.com/embed/xNKilogWNNs?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=xNKilogWNNs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 			<p>
 				ELE-GEARを装備したエクレアができる技の中で<br>最も重要なのが
@@ -170,56 +170,6 @@
     <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
 //]]></script>
-	<!-- Youtube -->
-	<script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-
-      tag.src = "https://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
-      //    after the API code downloads.
-      var player;
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-          height: '360',
-          width: '640',
-          videoId: 'M7lc1UVf-VE',
-          events: {
-            'onReady': onPlayerReady,
-            'onStateChange': onPlayerStateChange
-          },
-          playerVars: {
-          	controls: 0,
-          	autoplay: 1,
-          	showinfo: 0,
-          	loop: 1
-          }
-        });
-      }
-
-      // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        event.target.playVideo();
-        event.target.mute();
-      }
-
-      // 5. The API calls this function when the player's state changes.
-      //    The function indicates that when playing a video (state=1),
-      //    the player should play for six seconds and then stop.
-      var done = false;
-      function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-        }
-      }
-      function stopVideo() {
-        player.stopVideo();
-      }
-    </script>
     <!-- SweetScroll -->
     <script src="https://unpkg.com/sweet-scroll/sweet-scroll.min.js"></script>
     <script>
