動画を調整

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
 			</div>
 			<div class="header-info">
 				<a href="" class="header-banner"> 
-					<img src="images/header/logo.png">
+					<img src="images/header/Twitter.svg">
 				</a>
 				<a href="" class="header-banner"> 
-					<img src="images/header/logo.png">
+					<img src="images/header/ragingInferno.png">
 				</a>
 			</div>
 		</div>
@@ -51,8 +51,9 @@
 	</nav>
 	<div class="movie">
 		<a href="#">
-			<iframe width="1280" height="320" src="https://www.youtube.com/embed/qmaJQN9-RVM?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=qmaJQN9-RVM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<img src="images/movie/play.svg" width=56 height=56 alt="動画を再生" class="movie-play">
 		</a>
+		<iframe width="1280" height="320" src="https://www.youtube.com/embed/qmaJQN9-RVM?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=qmaJQN9-RVM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
 	<div id="about" class="about">
 		<div class="section-header"><h2>電撃少女エクレアとは</h2></div>
