--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
 				
 			</div>
 			<div class="header-info">
-				<a href="" class="header-banner"> 
+				<a href="https://twitter.com/Eclair_HTL" class="header-banner"> 
 					<img src="images/header/Twitter.svg">
 				</a>
-				<a href="" class="header-banner"> 
+				<a href="http://www.qpic.jp/public/games/view/254" class="header-banner"> 
 					<img src="images/header/ragingInferno.png">
 				</a>
 			</div>
