--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <meta name=”robots” content=”noindex”>
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- ShadowBox -->
+    <link rel="stylesheet" type="text/css" href="shadowbox/shadowbox.css">
+    <script type="text/javascript" src="shadowbox/shadowbox.js"></script>
+    <script type="text/javascript">
+    	Shadowbox.init();
+    </script>
   </head>
   <body>
 	<header class="header">
@@ -50,10 +56,10 @@
 		</div>
 	</nav>
 	<div class="movie">
-		<a href="#">
+		<a href="https://www.youtube.com/embed/autYRqHTAlI?autoplay=1" rel="shadowbox;width=960;height=540" onclick="pauseMovie()">
 			<img src="images/movie/play.svg" width=56 height=56 alt="動画を再生" class="movie-play">
 		</a>
-		<iframe width="1280" height="320" src="https://www.youtube.com/embed/qmaJQN9-RVM?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=qmaJQN9-RVM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<iframe id="movie-iframe" width="1280" height="320" src="https://www.youtube.com/embed/qmaJQN9-RVM?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=qmaJQN9-RVM&amp;enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
 	<div id="about" class="about">
 		<div class="section-header"><h2>電撃少女エクレアとは</h2></div>
@@ -131,11 +137,13 @@
 		<h2>ギャラリー</h2>
 	</div>
 	<div id="roadmap" class="roadmap">
-		<h2>ロードマップ</h2>
-		<ul>
-			<li>2018年夏　第1章公開</li>
-			<li>2019年中に第4章まで公開</li>
-		</ul>
+		<div class="roadmap-inner frame">
+			<h2>ロードマップ</h2>
+			<ul>
+				<li>2018年夏　第1章公開</li>
+				<li>2019年中に第4章まで公開</li>
+			</ul>
+		</div>
 	</div>
 	</div><!-- navigation-wrapper -->
 <!-- 	<div id="member" class="member">
@@ -162,7 +170,8 @@
 		</div>
 	</div> -->
 	<footer class="footer">
-		&copy;Team HTL in Qpic
+		<img src="images/header/logo.png" width="400" alt="">
+		<p>&copy;Team HTL in Qpic</p>
 	</footer>
 
     <!-- Scripts -->
