ギャラリー画像設置

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,16 @@
 	</div>
 	<div id="gallery" class="gallery">
 		<h2>ギャラリー</h2>
+		<div class="container">
+			<a href="images/gallery/1.jpg" rel="shadowbox[gallery]"><img src="images/gallery/1.thumb.jpg" alt="1章コンセプトアート"></a>
+			<a href="images/gallery/2.jpg" rel="shadowbox[gallery]"><img src="images/gallery/2.thumb.jpg" alt="ボルト"></a>
+			<a href="images/gallery/3.jpg" rel="shadowbox[gallery]"><img src="images/gallery/3.thumb.jpg" alt="避雷針"></a>
+			<a href="images/gallery/4.jpg" rel="shadowbox[gallery]"><img src="images/gallery/4.thumb.jpg" alt="電撃移動中のエクレア"></a>
+			<a href="images/gallery/5.jpg" rel="shadowbox[gallery]"><img src="images/gallery/5.thumb.jpg" alt="クラゲ足場"></a>
+			<a href="images/gallery/6.jpg" rel="shadowbox[gallery]"><img src="images/gallery/6.thumb.jpg" alt="ボルトを投げるエクレア"></a>
+			<a href="images/gallery/7.jpg" rel="shadowbox[gallery]"><img src="images/gallery/7.thumb.jpg" alt="溶鉱炉"></a>
+			<a href="images/gallery/8.jpg" rel="shadowbox[gallery]"><img src="images/gallery/8.thumb.jpg" alt="水と避雷針"></a>
+		</div>
 	</div>
 	<div id="roadmap" class="roadmap">
 		<div class="roadmap-inner frame">
