動画のループが目立たなくなった

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 		<a href="https://www.youtube.com/embed/autYRqHTAlI?autoplay=1" rel="shadowbox;width=960;height=540" onclick="pauseMovie()">
 			<img src="images/movie/play.svg" width=56 height=56 alt="動画を再生" class="movie-play">
 		</a>
-		<iframe id="movie-iframe" width="1280" height="320" src="https://www.youtube.com/embed/qmaJQN9-RVM?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=qmaJQN9-RVM&amp;enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<div id="movie-player"></div>
 	</div>
 	<div id="about" class="about">
 		<div class="section-header"><h2>電撃少女エクレアとは</h2></div>
@@ -85,7 +85,7 @@
 
 			<h3>エクレア最大のアクション「電撃移動」</h3>
 			<div class="about-movie">
-				<iframe width="480" height="360" src="https://www.youtube.com/embed/xNKilogWNNs?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1&amp;autoplay=1&amp;playlist=xNKilogWNNs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<div id="about-player"></div>
 			</div>
 			<p>
 				ELE-GEARを装備したエクレアができる技の中で<br>最も重要なのが
