--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 					<li>プレイ人数: 1人</li>
 				</ul>
 				<div class="header-message">
-				2018年中の一部公開に向けて現在開発中
+				<span>2018年中の一部公開に向けて</span><span>現在開発中</span>
 			</div>
 			</div>
 			<div class="header-share">
@@ -44,14 +44,16 @@
 		</div>
 	</header>
 	<div class="navigation-wrapper">
-	<nav id="nav" class="navigation">
+		<a class="hamburger-mobile" onclick="toggleNav()">≡</a>
+	<nav id="nav" class="navigation" v-bind:class="{'shown-in-mobile': shownInMobile}">
 		<div class="container-wide">
 			<ul>
-				<li class="nav-top"><a href="#"><img src="images/navgation/silhouette.svg" alt="トップへ"></a></li>
-				<li class="nav-about" v-bind:class="{active: currentSection == 0}"><a href="#about"><span>電撃少女</span><span>エクレアとは</span></a></li>
-				<li class="nav-character" :class="{active: currentSection == 1}"><a href="#characters">キャラクター</a></li>
-				<li class="nav-gallery" :class="{active: currentSection == 2}"><a href="#gallery">ギャラリー</a></li>
-				<li class="nav-roadmap" :class="{active: currentSection == 3}"><a href="#roadmap">ロードマップ</a></li>
+				<li class="toolbar-mobile"><a v-on:click="shownInMobile = !shownInMobile">INDEX</a></li>
+				<li class="nav-top" v-on:click="shownInMobile = false"><a href="#"><img src="images/navgation/silhouette.svg" alt="トップへ"></a></li>
+				<li class="nav-about" v-bind:class="{active: currentSection == 0}" v-on:click="shownInMobile = false"><a href="#about"><span>電撃少女</span><span>エクレアとは</span></a></li>
+				<li class="nav-character" :class="{active: currentSection == 1}" v-on:click="shownInMobile = false"><a href="#characters">キャラクター</a></li>
+				<li class="nav-gallery" :class="{active: currentSection == 2}" v-on:click="shownInMobile = false"><a href="#gallery">ギャラリー</a></li>
+				<li class="nav-roadmap" :class="{active: currentSection == 3}" v-on:click="shownInMobile = false"><a href="#roadmap"><span>ロード</span><span>マップ</span></a></li>
 			</ul>
 		</div>
 	</nav>
