タブレット使うやつとかおらんやろ〜

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 					<li>プレイ人数: 1人</li>
 				</ul>
 				<div class="header-message">
-				<span>2018年中の一部公開に向けて</span><span>現在開発中</span>
+				<span>2018年中の</span><span>一部公開に向けて開発中</span>
 			</div>
 			</div>
 			<div class="header-share">
@@ -99,7 +99,7 @@
 			</p>
 			<p>
 				電撃移動を行うにはあらかじめ<br>
-				「<b>ボルト</b>」と呼ばれる装置を移動したい場所に投げます。<br>
+				「<b>ボルト</b>」と呼ばれる装置を<span>移動したい場所に投げます。</span><br>
 				電撃移動を始めると、<br>
 				エクレアはボルトに向かって引き寄せられます。
 			</p>
@@ -137,7 +137,7 @@
 	</div>
 	<div id="gallery" class="gallery">
 		<h2>ギャラリー</h2>
-		<div class="container">
+		<div class="gallery-container">
 			<a href="images/gallery/1.jpg" rel="shadowbox[gallery]"><img src="images/gallery/1.thumb.jpg" alt="1章コンセプトアート"></a>
 			<a href="images/gallery/2.jpg" rel="shadowbox[gallery]"><img src="images/gallery/2.thumb.jpg" alt="ボルト"></a>
 			<a href="images/gallery/3.jpg" rel="shadowbox[gallery]"><img src="images/gallery/3.thumb.jpg" alt="避雷針"></a>
