電撃少女エクレアとは？の改行位置

--- a/src/index.html
+++ b/src/index.html
@@ -68,42 +68,59 @@
 		<div class="section-header yellow"><h2>電撃少女エクレアとは</h2></div>
 		<div class="container">
 			<p>
-				<b>電撃少女エクレア</b>は、<br>
+				<span><b>電撃少女エクレア</b>は、</span>
 				<span class="emphasized">スピード感・爽快感のある動き</span><br>
-				を目指した3Dアクションゲーム。
+				<span>を目指した</span>
+				<span>3Dアクションゲーム。</span>
 			</p>
 			<p>
-				電気を操る少女 「<b>エクレア</b>」は、彼女を救った<br>
-				『<b>ギア</b>』の研究者「<b>オレイエット</b>」から依頼を受ける。<br>
-				なんでも、大いなる力を持つ『<b>時空のギア</b>』の一部を<br>
-				武装ギア集団『<b>アーミーギア</b>』から<br>
-				回収して欲しいとのこと。
+				<span>電気を操る少女</span>
+				<span>「<b>エクレア</b>」は、</span>
+				<span>彼女を救った</span>
+				<span>『<b>ギア</b>』の研究者</span>
+				<span>「<b>オレイエット</b>」</span>
+				<span>から依頼を受ける。</span>
 			</p>
 			<p>
-				電撃を操るギア「<b>ELE-GEAR</b>」を駆使しながら、<br>
-				彼女はアーミーギアへ立ち向かう。
+				<span>なんでも、大いなる力を持つ</span>
+				<span>『<b>時空のギア</b>』の一部を</span>
+				<span>武装ギア集団『<b>アーミーギア</b>』</span>
+				<span>から</span>
+				<span>回収して欲しいとのこと。</span>
+			</p>
+			<p>
+				<span>電撃を操るギア</span>
+				<span>「<b>ELE-GEAR</b>」を駆使しながら、</span>
+				<span>彼女はアーミーギアへ立ち向かう。</span>
 			</p>
 
 			<img v-if="!isPhone" src="images/about/eclair.png" alt="エクレア" height=640 class="about-eclair">
 
-			<h3>エクレア最大のアクション「電撃移動」</h3>
+			<h3><span>エクレア最大の</span>
+				<span>アクション「電撃移動」</span></h3>
 			<div class="about-movie">
 				<div id="about-player"></div>
 			</div>
 			<img v-if="isPhone" src="images/about/eto.gif" alt="エクレア" height=320 class="about-gif">
 			<p>
-				ELE-GEARを装備したエクレアができる技の中で<br>最も重要なのが
+				<span>ELE-GEARを装備した</span>
+				<span>エクレアができる技の中で</span>
+				<span>最も重要なのが</span>
 				「<span class="emphasized">電撃移動</span>」です。
 			</p>
 			<p>
-				これは、エクレア自らが<b>電気体</b>となり、<br>
-				あらゆる場所に高速で移動することができる技です。
+				<span>これは、エクレア自らが</span>
+				<span><b>電気体</b>となり、</span>
+				<span>あらゆる場所に高速で</span>
+				<span>移動することができる技です。</span>
 			</p>
 			<p>
-				電撃移動を行うにはあらかじめ<br>
-				「<b>ボルト</b>」と呼ばれる装置を<span>移動したい場所に投げます。</span><br>
-				電撃移動を始めると、<br>
-				エクレアはボルトに向かって引き寄せられます。
+				<span>電撃移動を行うにはあらかじめ</span>
+				<span>「<b>ボルト</b>」と呼ばれる装置を</span>
+				<span>移動したい場所に投げます。</span>
+				<span>電撃移動を始めると、</span><br>
+				<span>エクレアはボルトに向かって</span>
+				<span>引き寄せられます。</span>
 			</p>
 		</div>
 	</div>
