キャラクターとロードマップ改行位置

--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,8 @@
 				<img src="images/characters/eclair.png" height=480 alt="エクレア" class="characters-image">
 				<p>
 					「ELE-GEAR」を操る少女。<br>
-					オレイエットの依頼を受けアーミーギアを倒しに行く。
+					<span>オレイエットの依頼を受け</span>
+					<span>アーミーギアを倒しに行く。</span>
 				</p>
 				<p>
 					焼き芋が好き。
@@ -142,11 +143,17 @@
 				<h3><span>ビクター・</span><span>オレイエット</span></h3>
 				<img src="images/characters/oreillette.png" height=480 alt="オレイエット" class="characters-image">
 				<p>
-					「ギア」と呼ばれる不思議な装置を研究している男。<br>
-					襲撃を受け気を失ったエクレアを助け、彼女に「時空のギア」の回収を依頼する。
+					<span>「ギア」と呼ばれる</span>
+					<span>不思議な装置を研究している男。</span><br>
+					<span>襲撃を受け気を失った</span>
+					<span>エクレアを助け、</span><br>
+					<span>彼女に</span>
+					<span>「時空のギア」の回収を</span>
+					<span>依頼する。</span>
 				</p>
 				<p>
-					エクレアの戦闘を無線でサポートする。
+					<span>エクレアの戦闘を</span>
+					<span>無線でサポートする。</span>
 				</p>
 			</div>
 			<div class="and-so-on">
@@ -171,8 +178,10 @@
 		<div class="roadmap-inner frame">
 			<h2>ロードマップ</h2>
 			<ul>
-				<li>2018年夏　第1章公開</li>
-				<li>2019年中に第4章まで公開</li>
+				<li><span>2018年夏</span>
+					<span>第1章公開</span></li>
+				<li><span>2019年中に</span>
+					<span>第4章まで公開</span></li>
 			</ul>
 		</div>
 	</div>
