開発用のJSを削除

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name=”robots” content=”noindex”>
     <!-- Vue.js -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
     <!-- ShadowBox -->
     <link rel="stylesheet" type="text/css" href="shadowbox/shadowbox.css">
@@ -218,9 +218,9 @@
     <!-- Scripts -->
     <script src="js/script.js"></script>
     <!-- BrowserSync -->
-    <script id="__bs_script__">//<![CDATA[
+    <!-- <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+//]]></script> -->
     <!-- SweetScroll -->
     <script src="https://unpkg.com/sweet-scroll/sweet-scroll.min.js"></script>
     <script>
