--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,22 @@
 			</div>
 			</div>
 			<div class="header-share">
-				
+				<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fqpic.jp%2Feclair&width=72&layout=button&action=like&size=small&show_faces=true&share=false&height=65&appId" width="72" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 			</div>
 			<div class="header-info">
-				<a href="https://twitter.com/Eclair_HTL" class="header-banner"> 
+				<a v-if="isPhone" href="https://twitter.com/Eclair_HTL" class="header-banner"> 
 					<img src="images/header/Twitter.svg">
 				</a>
-				<a href="http://www.qpic.jp/public/games/view/254" class="header-banner"> 
+				<div class="header-banner">
+					<div class="header-twitter-header">
+						<img src="images/header/twitterIcon.svg" width=36 alt="">
+						<span>@Eclair_HTL</span>
+						<a href="https://twitter.com/Eclair_HTL">フォロー</a>
+					</div>
+					<a class="twitter-timeline" data-lang="ja" data-width="240" data-height="200" data-chrome="noheader nofooter" href="https://twitter.com/Eclair_HTL?ref_src=twsrc%5Etfw">Tweets by Eclair_HTL</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>
+				<a v-if="isPhone" href="http://www.qpic.jp/public/games/view/254" class="header-banner"> 
 					<img src="images/header/ragingInferno.png">
 				</a>
 			</div>
