ソーシャルボタン

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
 				<div class="header-banner">
 					<div class="header-twitter-header">
 						<img src="images/header/twitterIcon.svg" width=36 alt="">
-						<span>@Eclair_HTL</span>
-						<a href="https://twitter.com/Eclair_HTL">フォロー</a>
+						<a class="twitter-name" href="#">@Eclair_HTL</a>
+						<a class="twitter-follow" href="https://twitter.com/Eclair_HTL">フォロー</a>
 					</div>
 					<a class="twitter-timeline" data-lang="ja" data-width="240" data-height="200" data-chrome="noheader nofooter" href="https://twitter.com/Eclair_HTL?ref_src=twsrc%5Etfw">Tweets by Eclair_HTL</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
@@ -220,6 +220,11 @@
 	</div> -->
 	<footer class="footer">
 		<img src="images/header/logo.png" width="400" alt="">
+		<div class="footer-social">
+			<a href="https://twitter.com/Eclair_HTL?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="ja" data-show-count="false">Follow @Eclair_HTL</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-lang="ja" data-size="large" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fqpic.jp%2Feclair&width=72&layout=button&action=like&size=large&show_faces=true&share=false&height=65&appId" width="88" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+		</div>
 		<p>&copy;Team HTL in Qpic</p>
 	</footer>
 	</div><!-- navigation-wrapper -->
