--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,41 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name=”robots” content=”noindex”>
     <!-- Vue.js -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
+    <script id="decoration" type="text/x-template">
+    	<img :data-src="'images/decoration/' + index + '.svg'" :style="'position: relative; top: '+dy+'px;left:'+dx+'px;'" class="decoration-item" :class="'random-'+rotationPattern">
+    </script>
+    <script id="decoration-wrapper" type="text/x-template">
+    	<div class="decoration-wrapper" :class="{right:side===1, left:side===0}">
+    		<decoration></decoration>
+    		<decoration></decoration>
+    		<decoration></decoration>
+    		<decoration></decoration>
+    	</div>
+    </script>
+    <script>
+    	var Random = function(min,max) {
+  			return Math.floor( Math.random() * (max + 1 - min) ) + min ;
+		};
+    	//Decoration
+		Vue.component('decoration', {
+		  data: function (){
+		  	return {
+    			dx: Random(-144,144),
+    			dy: Random(-80,80),
+    			rotationPattern: Random(0,3),
+    			index: Random(0,2)
+    		};
+  		  },
+		  template: '#decoration'
+		});
+		Vue.component('decoration-wrapper',{
+			props: ['side'],
+			template: '#decoration-wrapper'
+		});
+		//End Decoration
+    </script>
     <!-- ShadowBox -->
     <link rel="stylesheet" type="text/css" href="shadowbox/shadowbox.css">
     <script type="text/javascript" src="shadowbox/shadowbox.js"></script>
@@ -36,10 +69,10 @@
 				<iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fqpic.jp%2Feclair&width=72&layout=button&action=like&size=small&show_faces=true&share=false&height=65&appId" width="72" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 			</div>
 			<div class="header-info">
-				<a v-if="isPhone" href="https://twitter.com/Eclair_HTL" class="header-banner"> 
+				<a v-if="isMobile" href="https://twitter.com/Eclair_HTL" class="header-banner"> 
 					<img src="images/header/Twitter.svg">
 				</a>
-				<div v-if="!isPhone" class="header-banner">
+				<div v-if="!isMobile" class="header-banner">
 					<div class="header-twitter-header">
 						<img src="images/header/twitterIcon.svg" width=36 alt="">
 						<a class="twitter-name" href="https://twitter.com/Eclair_HTL" target="_blank">@Eclair_HTL</a>
@@ -47,18 +80,18 @@
 					</div>
 					<a class="twitter-timeline" data-lang="ja" data-width="240" data-height="200" data-chrome="noheader nofooter" href="https://twitter.com/Eclair_HTL?ref_src=twsrc%5Etfw">Tweets by Eclair_HTL</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
-				<a v-if="isPhone" href="http://www.qpic.jp/public/games/view/254" class="header-banner"> 
+				<a v-if="isMobile" href="http://www.qpic.jp/public/games/view/254" class="header-banner"> 
 					<img src="images/header/ragingInferno.png">
 				</a>
 			</div>
 		</div>
 	</header>
-	<div class="navigation-wrapper">
+	<div id="wrapper" class="navigation-wrapper">
 		<a class="hamburger-mobile" onclick="toggleNav()"><img src="images/navgation/hamburger.svg" alt="メニュー"></a>
 	<nav id="nav" class="navigation" v-bind:class="{'shown-in-mobile': shownInMobile}">
 		<div class="container-wide">
 			<ul>
-				<li v-if="isPhone" class="toolbar-mobile"><a v-on:click="shownInMobile = !shownInMobile">{{sectionNames[currentSection+1]}}</a></li>
+				<li v-if="isPhone" class="toolbar-mobile"><a v-on:click="shownInMobile = !shownInMobile">{{currentSectionName}}</a></li>
 				<li class="nav-top" v-on:click="shownInMobile = false"><a href="#"><img src="images/navgation/silhouette.svg" alt="トップへ"></a></li>
 				<li class="nav-about" v-bind:class="{active: currentSection == 0}" v-on:click="shownInMobile = false"><a href="#about"><span>電撃少女</span><span>エクレアとは</span></a></li>
 				<li class="nav-character" :class="{active: currentSection == 1}" v-on:click="shownInMobile = false"><a href="#characters">キャラクター</a></li>
@@ -67,7 +100,9 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="horizon"></div>
+	<div class="banner">
+		<a href="#minigames" rel="shadowbox:width=960;height=640"><img src="images/banner/minigame-banner.png" width=560 height=72 alt="ミニゲーム配信中！"></a>
+	</div>
 	<div id="movie" class="movie">
 		<a href="https://youtu.be/autYRqHTAlI" :href="isPhone ? 'https://www.youtube.com/watch?v=autYRqHTAlI' : 'https://www.youtube.com/embed/autYRqHTAlI?autoplay=1'" :rel="isPhone ? '' : 'shadowbox;width=960;height=540'" onclick="pauseMovie()">
 			<img src="images/movie/play.svg" width=64 height=64 alt="動画を再生" class="movie-play">
@@ -75,8 +110,9 @@
 		<div id="movie-player"></div>
 	</div>
 	<div id="about" class="about" v-lazy-container="{ selector: 'img' }">
-		<div class="section-header yellow"><h2>電撃少女エクレアとは</h2></div>
+		<div class="section-header"><h2>電撃少女エクレアとは</h2></div>
 		<div class="container">
+			<decoration-wrapper :side="0"></decoration-wrapper>
 			<p>
 				<span><b>電撃少女エクレア</b>は、</span>
 				<span class="emphasized">スピード感・爽快感のある動き</span><br>
@@ -108,7 +144,7 @@
 
 			<h3><span>エクレア最大の</span>
 				<span>アクション「電撃移動」</span></h3>
-			<div class="about-movie">
+			<div class="about-movie" v-if="!isPhone">
 				<div id="about-player"></div>
 			</div>
 			<img v-if="isPhone" data-src="images/about/eto.gif" alt="エクレア" height=320 class="about-gif">
@@ -132,11 +168,13 @@
 				<span>エクレアはボルトに向かって</span>
 				<span>引き寄せられます。</span>
 			</p>
+			<decoration-wrapper :side="1"></decoration-wrapper>
 		</div>
 	</div>
 	<div id="characters" class="characters" v-lazy-container="{ selector: 'img' }">
 		<div class="section-header cyan"><h2>キャラクター</h2></div>
 		<div class="container">
+			<decoration-wrapper :side="0"></decoration-wrapper>
 			<div class="character">
 				<h3>エクレア</h3>
 				<img data-src="images/characters/eclair.png" height=480 alt="エクレア" class="characters-image">
@@ -169,6 +207,7 @@
 			<div class="and-so-on">
 				<p>and so on...</p>
 			</div>
+			<decoration-wrapper :side="1"></decoration-wrapper>
 		</div>
 	</div>
 	<div id="gallery" class="gallery" v-lazy-container="{ selector: 'img' }">
@@ -228,6 +267,20 @@
 		<p>&copy;Team HTL in Qpic</p>
 	</footer>
 	</div><!-- navigation-wrapper -->
+
+	<div id="minigames"><!-- Shown by Shadowbox -->
+		<div class="minigames">
+			<h2>ミニゲーム</h2>
+			<p>
+				本編は現在開発中ですが、開発途中で生まれたミニゲームを配信しています。
+			</p>
+			<div class="minigames-inner">
+				<div class="minigame">
+					<h3>あいうえお</h3>
+				</div>
+			</div>
+		</div>
+	</div>
 
     <!-- Scripts -->
     <script src="js/script.js"></script>
