ミニゲームバナー&中身一応完成

--- a/src/index.html
+++ b/src/index.html
@@ -269,15 +269,23 @@
 	</div><!-- navigation-wrapper -->
 
 	<div id="minigames"><!-- Shown by Shadowbox -->
-		<div class="minigames">
-			<h2>ミニゲーム</h2>
+		<div class="minigames-container">
+			<div class="minigames">
+			<h3>ミニゲーム</h3>
 			<p>
 				本編は現在開発中ですが、開発途中で生まれたミニゲームを配信しています。
 			</p>
 			<div class="minigames-inner">
 				<div class="minigame">
-					<h3>あいうえお</h3>
+					<h4>電撃少女エクレア 業火の脱走路 &lt;レイジング・インフェルノ&gt;</h4>
+					<div class="minigame-inner">
+					<img src="images/minigames/inferno.png" width="280" alt="電撃少女エクレア 業火の脱走路" class="minigame-logo">
+					<p class="description">灼熱の溶鉱炉からできるだけ早く脱出しよう！エクレアの要となるアクション「電撃移動」の試作第一号です。</p>
+					<img src="images/minigames/inferno-screenshot.jpg" alt="スクリーンショット" class="minigame-screenshot">
+					</div>
+					<a href="http://qpic.jp/new/works/games/254" class="minigame-download button">Qpicの詳細ページへ</a>
 				</div>
+			</div>
 			</div>
 		</div>
 	</div>
