--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>電撃少女エクレア 公式サイト</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name=”robots” content=”noindex”>
+    <!-- OGP -->
+    <meta name="theme-color" content="#F28446">
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
