--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name=”robots” content=”noindex”>
     <!-- OGP -->
+    <head prefix="og: http://ogp.me/ns# website: http://ogp.me/ns/website#">
+	<meta property="og:title" content="電撃少女エクレア　公式サイト" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://qpic.jp/pages/eclair" />
+	<meta property="og:image" content="http://qpic.jp/pages/eclair/images/common/ogp.jpg" />
+	<meta property="og:site_name" content="Qpic" />
+	<meta property="og:description" content="Qpic開発の3Dアクションゲーム「電撃少女エクレア」の公式サイトです。" />
+
+	<!-- TwitterCard -->
+	<meta name="twitter:card" content="summary large image" />
+
     <meta name="theme-color" content="#F28446">
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
